updated card styles

--- a/src/index.css
+++ b/src/index.css
@@ -776,6 +776,10 @@
     margin-bottom: calc(var(--spacing) * 12);
   }
 
+  .-ml-2 {
+    margin-left: calc(var(--spacing) * -2);
+  }
+
   .ml-0\.5 {
     margin-left: calc(var(--spacing) * .5);
   }
@@ -786,6 +790,10 @@
 
   .ml-2 {
     margin-left: calc(var(--spacing) * 2);
+  }
+
+  .ml-32 {
+    margin-left: calc(var(--spacing) * 32);
   }
 
   .line-clamp-1 {
