uploading audio, and edits to audio player

--- a/src/index.css
+++ b/src/index.css
@@ -1250,10 +1250,6 @@
     justify-content: flex-end;
   }
 
-  .justify-start {
-    justify-content: flex-start;
-  }
-
   .gap-1 {
     gap: calc(var(--spacing) * 1);
   }
@@ -2336,10 +2332,6 @@
     padding-right: calc(var(--spacing) * 4);
   }
 
-  .pr-39 {
-    padding-right: calc(var(--spacing) * 39);
-  }
-
   .pb-4 {
     padding-bottom: calc(var(--spacing) * 4);
   }
@@ -2370,10 +2362,6 @@
 
   .pl-11 {
     padding-left: calc(var(--spacing) * 11);
-  }
-
-  .pl-16 {
-    padding-left: calc(var(--spacing) * 16);
   }
 
   .text-center {
@@ -3560,6 +3548,12 @@
   @media (width >= 48rem) {
     .md\:py-12 {
       padding-block: calc(var(--spacing) * 12);
+    }
+  }
+
+  @media (width >= 48rem) {
+    .md\:pl-16 {
+      padding-left: calc(var(--spacing) * 16);
     }
   }
 
